--- a/TO_DO.HTML
+++ b/TO_DO.HTML
@@ -18,7 +18,7 @@
             </div>
             <div id="list"></div>
         </div>
-        <button id="btn" onclick="create()"></button>
+        <!-- <button id="btn" onclick="create()"></button> -->
         <div id="two">
             <textarea name="area" id="area" placeholder="YOU need To TYPE HERE! ..."></textarea>
         </div>
